[package]
name = "millf-stones"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
base64 = "0.22"
regex = "1.10"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
urlencoding = "2"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"

[profile.release]
opt-level = "z"          # Оптимизация под размер (вместо "3")
lto = true
codegen-units = 1
panic = "abort"          # Убираем unwind tables (-10% размера)
strip = true             # Удаляем debug symbols